# databases

./: .gitignore  README.md  demo.ipynb  pyproject.toml  solvents.md
.github/workflows/: CI.yml
data/kinetics/: README.md
data/solvation/: README.md
data/thermo/: README.md
databases/: generator.py  schema.py  tristate20.py  wrappers.py
docs/: conf.py  modules.rst
scripts/: generate_db.sh  generate_db.slurm  generate_logfile_lists.slurm  generator.py  log_finder.sh  parse_quantum_pioneer_semiempirical.sh  submit_all.sh
scripts/kinetics/: collect_kinetic_data.ipynb
scripts/qm_results/: filter_species_dft_results.ipynb  filter_species_dlpno_results.ipynb  filter_species_semiempirical_results.ipynb  filter_ts_dft_results.ipynb  filter_ts_dlpno_results.ipynb  filter_ts_semiempirical_results.ipynb
scripts/semiempirical_split/: nonts_analysis.ipynb  ts_analysis.ipynb
scripts/solvation/: collect_reaction_solvation_data.ipynb  solvents.csv  split_nonts_solvation_data.ipynb  split_nonts_solvation_data.py  split_ts_solvation_data.ipynb  split_ts_solvation_data.py
scripts/thermo/: species_thermo_data.ipynb  species_thermodynamics.ipynb  transition_state_thermo_data.ipynb
test/: test_tristate20.py
tristate20/: __init__.py  tristate20.py
