[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tristate20"
version = "0.0.0a0"
authors = [
    { name = "Jackson Burns" },
]
license = { text = "MIT" }
description = "TRISTATE20 Dataset"
classifiers = [
    "Programming Language :: Python :: 3",
]
urls = { Homepage = "https://github.com/QuantumPioneer/tristate20" }
requires-python = ">=3.8"
dependencies = ["dill","peewee"]

[project.optional-dependencies]
dev = ["black", "isort", "pytest"]
demos = ["jupyter"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.isort]
profile = "black"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tristate20*"]
exclude = ["docs*", "examples*", "test*"]
